--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
+SITE_NAME_HEADER=AllotmentZone
+SITE_MAIN_LANGUAGE=en
+SITE_BASE_URL=https://allotmentzone.vercel.app/
+SHOW_CREATED_TIMESTAMP=true
+TIMESTAMP_FORMAT=dd MMM, yyyy HH:mm
+SHOW_UPDATED_TIMESTAMP=true
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=true
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=body.css-settings-manager { --cards-border-width: 1px; --image-radius: 6px; } body.theme-light.css-settings-manager { --tx1: #323232; --tx2: #5E5E5E; --h1-color: #FFA32A; --h2-color: #FFA32A; --h3-color: #FFA32A; --h4-color: #FFA32A; --link-external-color: #FFA32A; --link-external-color-hover: #FFBE68; --link-color-hover: #FFBE68; --link-color: #FFA32A; --link-unresolved-color: #FFBE68; --link-unresolved-decoration-color: #FFBE68; } body.theme-dark.css-settings-manager { --tx1: #D7D7D7; --tx2: #E8E8E8; --h1-color: #FFA32A; --h2-color: #FFA32A; --h3-color: #FFA32A; --h4-color: #FFA32A; --link-external-color: #FFA32A; --link-external-color-hover: #FFBE68; --link-color-hover: #FFBE68; --link-color: #FFA32A; --link-unresolved-color: #FFBE68; --link-unresolved-decoration-color: #FFBE68; }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-macos is-frameless is-hidden-frameless obsidian-app native-scrollbars show-inline-title show-view-header css-settings-manager minimal-theme minimal-default-dark minimal-default-light links-int-on links-ext-on full-width-media minimal-folding minimal-readable minimal-light minimal-dark chart-default-width table-default-width img-default-width iframe-default-width map-default-width is-maximized callouts-default trim-cols checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default tab-names-off ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover is-focused
+USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=true
+dgShowLocalGraph=false
+dgShowInlineTitle=false
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=false
+dgShowTags=false
