--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=The Allotment
+SITE_NAME_HEADER=The Wildlife Connectivity Project
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://allotmentzone.vercel.app/
 SHOW_CREATED_TIMESTAMP=true
