--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=Finding Refuge
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=https://allotmentzone.vercel.app/
+SITE_BASE_URL=https://findingrefuge.vercel.app/
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=dd MMM, yyyy HH:mm
 SHOW_UPDATED_TIMESTAMP=true
