--- a/vercel.json
+++ b/vercel.json
@@ -13,3 +13,12 @@
         { "src": "/(.*)", "status": 404, "dest": "/404" }
       ]
 }
+
+{
+  "rewrites": [
+    {
+      "source": "/protected-page",
+      "destination": "/middleware"
+    }
+  ]
+}
